refactor: 알림 Entity 구조 변경 (#42)
* chore: local Dockerfile 추가

* refactor: 알림 Entity 상속관계 매핑으로 리팩토링

(#94)

* refactor: 엑세스 토큰 만료시간 임시로 30분으로 수정

(#94)

* style: SSE 성공 로그 추가

(#94)

* test: 알림 Entity 변경으로 인한 알림 서비스 테스트 코드 수정

(#94)

* refactor: NotificationEvent 에 auctionId 필드 추가

(#94)

* refactor: NotificationRealMessage auctionId 필드 추가

(#94)

* refactor: NotificationSseResponse auctionId 필드 추가

(#94)

* refactor: 상품의 좋아요 누른 사용자의 id를 찾는 도메인 함수 추가

(#94)

* refactor: NotificationType 에 타입마다 알림객체를 만드는 추상메서드 추가

(#94)

* refactor: 알림조회 응답 DTO 수정

(#94)

* refactor: 알림조회 상속관계 구조로 인한 쿼리 일부 수정

(#94)

* test: 알림조회 상속관계 구조로 인한 테스트 코드 수정

(#94)

* chore: 테스트 프론트 도커 이미지 제거

(#94)

* refactor: getFirstImage 함수 null 처리 리팩토링

(#94)

* refactor: 알림 생성시 공통된 필드 외에 추가된 필드를 Map 필드로 리팩토링

(#94)

* refactor: 공통된 필드 외에 추가된 필드의 Map에서 특정 키의 값을 가져오는 메서드 호출

(#94)

* refactor: NotificationEvent 객체 생성 메서드 이름 변경으로 인한 코드 수정

(#94)

* style: Redis pub/sub 메세지 수신시 발생하는 에러의 로그 명확하게 수정

(#94)

* refactor: 사전 등록 취소 알림 클래스 이름 변경

- AuctionRegistrationCanceledNotification -> PreRegistrationCanceledNotification 로 변경

(#94)

* refactor: 불필요한 Column 어노테이션 제거

(#94)

* refactor: 사전등록 상수 이름 변경으로 인한 코드 수정

(#94)

* refactor: NotificationEvent 객체 생성 메서드 변경으로 인한 코드 수정

(#94)

* refactor: 사전경매취소 클래스 이름 수정 및 상수 이름 변경

(#94)

* style: 주석 제거

(#94)

* style: 알림 메세지 수정

(#94)

* refactor: 쿠키 sameSite, secure 설정 추가

(#94)

* chore: CORS allowedMethods 명시적으로 설정

(#94)

* refactor: SSE 구독 요청 시 NGINX 버퍼링 비활성화를 위해 X-Accel-Buffering 헤더 추가

(#94)

* chore: SSE 관련 nginx 설정 추가

(#94)

* refactor: JWT 필터를 재발행 URL에서 제외

(#94)

* refactor: 커스텀 필터 빈에서 제외

(#94)

* refactor: 경매 상세 조회 쿼리 결과가 null 일시 에러코드 404로 변경

* refactor: ThousandMultipleValidator Long 도 가능하게 타입 변경

* refactor: 입찰 요청 DTO 유효성 검사 추가

* refactor: BankName Enum value 수정 및 from 메서드 추가

* refactor: createUser 시 이미 회원이 경우를 예외 처