@@ -1,11 +1,18 @@
 package org.chzz.market.common.config;
 
+import static org.springframework.http.HttpMethod.GET;
+import static org.springframework.http.HttpMethod.POST;
+
+import com.fasterxml.jackson.databind.ObjectMapper;
 import java.util.Collections;
+import java.util.List;
 import lombok.RequiredArgsConstructor;
 import org.chzz.market.common.error.handler.CustomAccessDeniedHandler;
 import org.chzz.market.common.error.handler.CustomAuthenticationEntryPoint;
 import org.chzz.market.common.error.handler.ExceptionHandlingFilter;
 import org.chzz.market.common.filter.JWTFilter;
+import org.chzz.market.common.filter.NotFoundFilter;
+import org.chzz.market.common.util.JWTUtil;
 import org.chzz.market.domain.user.oauth2.CustomFailureHandler;
 import org.chzz.market.domain.user.oauth2.CustomSuccessHandler;
 import org.chzz.market.domain.user.service.CustomOAuth2UserService;
@@ -22,8 +29,7 @@ import org.springframework.security.web.authentication.UsernamePasswordAuthentic
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-
-import static org.springframework.http.HttpMethod.*;
+import org.springframework.web.servlet.HandlerMapping;
 
 @Configuration
 @EnableWebSecurity
@@ -39,8 +45,9 @@ public class SecurityConfig {
     private final CustomAuthenticationEntryPoint customAuthenticationEntryPoint;
     private final CustomSuccessHandler customSuccessHandler;
     private final CustomFailureHandler customFailureHandler;
-    private final JWTFilter jwtFilter;
-    private final ExceptionHandlingFilter exceptionHandlingFilter;
+    private final JWTUtil jwtUtil;
+    private final ObjectMapper objectMapper;
+    private final List<HandlerMapping> handlerMappings;
 
     @Bean
     public SecurityFilterChain filterChain(final HttpSecurity http) throws Exception {
@@ -62,20 +69,6 @@ public class SecurityConfig {
                         .requestMatchers(POST,
                                 "/api/v1/users/tokens/reissue").permitAll()
                         .requestMatchers(POST, "/api/v1/users").hasRole("TEMP_USER")
-                        .requestMatchers(GET,
-                                "/api/v1/auctions/history",
-                                "/api/v1/auctions/won",
-                                "/api/v1/auctions/lost",
-                                "/api/v1/products/history").hasRole("USER")
-                        .requestMatchers(POST,
-                                "/api/v1/auctions",
-                                "/api/v1/auctions/start",
-                                "/api/v1/products/{productId:\\d+}/likes",
-                                "/api/v1/users/profile").hasRole("USER")
-                        .requestMatchers(PATCH,
-                                "/api/v1/products/{productId:\\d+}").hasRole("USER")
-                        .requestMatchers(DELETE,
-                                "/api/v1/products/{productId:\\d+}").hasRole("USER")
                         .anyRequest().hasRole("USER")
                 )
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
@@ -93,8 +86,9 @@ public class SecurityConfig {
                         .successHandler(customSuccessHandler)
                         .failureHandler(customFailureHandler)
                 )
-                .addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class)
-                .addFilterBefore(exceptionHandlingFilter, JWTFilter.class)
+                .addFilterBefore(new JWTFilter(jwtUtil), UsernamePasswordAuthenticationFilter.class)
+                .addFilterBefore(new NotFoundFilter(handlerMappings), JWTFilter.class)
+                .addFilterBefore(new ExceptionHandlingFilter(objectMapper), NotFoundFilter.class)
                 .sessionManagement(session -> session
                         .sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .build();
@@ -104,7 +98,7 @@ public class SecurityConfig {
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
         configuration.setAllowedOrigins(Collections.singletonList(clientUrl));
-        configuration.setAllowedMethods(Collections.singletonList("*"));
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
         configuration.setAllowCredentials(true);
         configuration.setAllowedHeaders(Collections.singletonList("*"));
         configuration.setExposedHeaders(Collections.singletonList("Authorization"));
